basic garden components added

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -7,5 +7,6 @@
   "dogs.dogs": "dogs",
   "dogs.myDogs": "my dogs",
   "dogs.adoptDog": "adopt a dog!",
-  "dogs.giveDog": "give a dog to a friend!"
+  "dogs.giveDog": "give a dog to a friend!",
+  "garden.garden": "Let's journal your garden!"
 }
