getting close - getting table object on route page but some funny goings on with routes

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -8,5 +8,7 @@
   "dogs.myDogs": "my dogs",
   "dogs.adoptDog": "adopt a dog!",
   "dogs.giveDog": "give a dog to a friend!",
-  "garden.garden": "Let's journal your garden!"
+  "garden.garden": "Let's journal your garden!",
+  "journal.myJournal": "Here is where you can read all your journal entries",
+  "journal.journal": "One day you will be able to add things too"
 }
