--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -5,5 +5,6 @@
   "app.home": "home",
   "garden.garden": "Profile",
   "garden.profile": "Garden Profile",
-  "journal.myJournal": "Journal"
+  "journal.myJournal": "Journal",
+  "garden.toDoList": "Garden To Do List"
 }
